fixed scrollbar issue

--- a/src/components/Website/SideBar.css
+++ b/src/components/Website/SideBar.css
@@ -55,6 +55,7 @@
 .bm-item-list {
     color: #b8b7ad;
     padding: 0.8em;
+    height: 90% !important;
 }
 
 /* Individual item */
